@@ -2,6 +2,8 @@
 
 	* src/SDCCopt.c:
 	  Remove negation by inverting jump condition.
+	* src/SDCCcse.c:
+	  Remove cast at conditional jump.
 
 2014-09-24 Maarten Brock <sourceforge.brock AT dse.nl>
 
